--- a/css/footer.css
+++ b/css/footer.css
@@ -6,7 +6,6 @@
   display: flex;
   align-items: flex-start;
   flex-direction: column;
-  gap: 16px;
 }
 .footer-logo {
   margin-bottom: 16px;
